opam-version: "2.0"
name: "MarshallB"
version: "0.1"
synopsis: "Continuous programming"
description: """
Continuous  programming
"""
maintainer: "Benjamin Sherman <sherman@csail.mit.edu>"
bug-reports: "sherman@csail.mit.edu"
license: "BSD"
depends: [ 
  "ocaml"  {= "4.07.0"}
  "ocamlfind" 
  "camlidl" {= "1.05"}
  "menhir" {= "20181113"}
  "num"  {= "1.1"}
  "mlgmpidl" {= "1.2.7"}
]
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install: [make "install"]
